soemi-moen/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soemi-moen-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: xn--smi-weather-rfb.ch
      http:
        paths:
          - path: /moen(|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: soemi-moen
                port:
                  number: 8080
